--- a/contactform.html
+++ b/contactform.html
@@ -61,19 +61,18 @@
   </div>
 </header>
   <!-- Informational content section -->
-    <div class="container bg-light-subtle mb-2 mt-4 fs-5 w-75 mx-auto p-2">
+    <div class="container bg-light-subtle mt-4 fs-5 ">
         <h1 class="mb-2 text-warning outlined-text">Join Us</h1>
      
       <p>Do you have an ancestor in your family tree who lived in the 17th century and either held an office or owned
         land?</p>
-      <p>Someone who fought for our freedom or served in a civil capacity, or aided and supported the patriotic cause in
-        other ways?</p>
+      
       <p>Colonial Dames XVII Century has been honoring the legacy of America's early settlers through historical
         preservation, education, and community service since 1915. With its three-part focus on historic preservation,
-        education, and patriotism, the Colonial Dames XVII Century is all about service...</p>
+        education, and patriotism, the Colonial Dames XVII Century is all about service.</p>
       <p>If you are interested in joining the Looking Glass Chapter or have questions, please fill out and submit the
         form below.</p>
-      <p>Thank you for your interest... we will get back to you as soon as possible.</p>
+      <p>Thank you for your interest, we will get back to you as soon as possible.</p>
       <p>For more information, visit the
         <a href="https://www.colonialdames17c.org/" target="_blank" rel="noopener">
           Colonial Dames XVII Century</a> website.
