--- a/ancestors.html
+++ b/ancestors.html
@@ -16,12 +16,13 @@
     <!-- Custom Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
 
-    
+
 </head>
 
 <body class="pt-2 bg-primary-subtle">
 
-    <!-- Navigation Bar -->
+    <!-- Responsive navigation bar -->
+    <!-- Wrapped Nav in header for easier identification and manipulation -->
     <header>
         <div>
             <div id="main-container" class="container bg-light p-1">
@@ -31,17 +32,18 @@
                         <!-- Brand -->
                         <a class="navbar-brand text-warning outlined-text" href="#">CDXVIIC</a>
 
-                        <!-- ✅ Only one hamburger menu button needed -->
+                        <!-- Hamburger menu button -->
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
-                        <!-- Collapsible nav items -->
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <!-- Collapsible nav items, right-aligned options when collapsed -->
+                        <div class="collapse navbar-collapse justify-content-end text-end" id="navbarSupportedContent">
                             <ul class="navbar-nav justify-content-center mx-auto mb-2 mb-lg-0">
 
+                                <!-- The active page link is bolded using css -->
                                 <!-- Home link -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Home</a>
@@ -57,6 +59,15 @@
                                     <a class="nav-link active" href="ancestors.html">Ancestors</a>
                                 </li>
                             </ul>
+
+                            <!-- Search form -->
+                            <!-- Search input and button is not yet wired to work -->
+                            <form class="d-inline-flex" role="search">
+                                <input class="form-control form-control-sm me-2 border-warning" type="search"
+                                    placeholder="Enter search item" aria-label="Search">
+                                <button class="btn btn-sm btn-outline-warning text-primary fw-bolder"
+                                    type="submit">Search</button>
+                            </form>
                         </div>
                     </div>
                 </nav>
@@ -159,7 +170,7 @@
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Initialize DataTables for enhanced interactivity -->
+    <!-- Initialize DataTables for enhanced interactivity with search and info enabled -->
     <script>
         $(document).ready(function () {
             const table = $('#ancestorTable').DataTable({
