--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 
 <body class="pt-2 bg-primary-subtle">
 
-
-    <!-- Main container for content -->
     <div id="main-container" class="container bg-light p-1">
 
         <!-- Responsive navigation bar -->
+        <!-- Wrapped Nav in header for easier identification and manipulation -->
         <header>
             <div>
                 <div id="main-container" class="container bg-light p-1">
@@ -37,17 +36,19 @@
                             <!-- Brand -->
                             <a class="navbar-brand text-warning outlined-text" href="#">CDXVIIC</a>
 
-                            <!-- ✅ Only one hamburger menu button needed -->
+                            <!-- Hamburger menu button -->
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
 
-                            <!-- Collapsible nav items -->
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <!-- Collapsible nav items, right-aligned options when collapsed -->
+                            <div class="collapse navbar-collapse justify-content-end text-end"
+                                id="navbarSupportedContent">
                                 <ul class="navbar-nav justify-content-center mx-auto mb-2 mb-lg-0">
 
+                                    <!-- The active page link is bolded using css -->
                                     <!-- Home link -->
                                     <li class="nav-item">
                                         <a class="nav-link active" href="index.html">Home</a>
@@ -63,6 +64,9 @@
                                         <a class="nav-link" href="ancestors.html">Ancestors</a>
                                     </li>
                                 </ul>
+
+                                <!-- Search form -->
+                                <!-- Search input and button is not yet wired to work -->
                                 <form class="d-inline-flex" role="search">
                                     <input class="form-control form-control-sm me-2 border-warning" type="search"
                                         placeholder="Enter search item" aria-label="Search">
@@ -75,9 +79,6 @@
                 </div>
             </div>
         </header>
-
-
-        <!-- Top-right search form -->
 
         <!-- Title block with logo, organization name, and chapter details -->
         <!-- Bootstrap Grid Layout for Chapter Info -->
@@ -105,13 +106,14 @@
 
         <!-- Brief statement about the society -->
         <div class="pt-3 fs-5">
-            <p >
+            <p>
                 The Looking Glass Chapter is a local chapter of the National Society Colonial Dames XVII Century, a
                 society dedicated to historic preservation, education,
                 and community service.
             </p>
-            <p >
-                Our Society is based on history and heritage. We mark and preserve historic sites to keep history alive
+            <p>
+                Our Society is based on history and heritage. We mark and preserve historic sites to keep history
+                alive
                 and relevant. We take pride in our historic headquarters located in the Dupont Circle
                 Historic District in Washington, D.C.
             </p>
@@ -119,23 +121,26 @@
 
     </div>
 
+
+    <!-- Main container for content -->
+
     <div class="container text-center my-4 position-relative">
         <div class="row g-3 justify-content-center">
 
             <!-- First image -->
             <div class="col-10 col-sm-6 col-md-4 d-flex align-items-stretch">
-                <div class="w-100 d-flex align-items-center justify-content-center p-2 bg-light">
+                <div class="w-75 mx-auto d-flex align-items-center justify-content-center bg-light">
                     <img src="images/young_adult_colonial_lady_with_bonnet.png" alt="Colonial girl" class="img-fluid">
                 </div>
             </div>
 
             <!-- Second image with centered spinning circle -->
             <div class="col-10 col-sm-6 col-md-4 d-flex align-items-stretch position-relative">
-                <div class="w-100 d-flex align-items-center justify-content-center p-2 bg-light position-relative">
+                <div
+                    class="w-100 mx-auto d-flex align-items-center justify-content-center p-2 bg-light position-relative">
 
                     <!-- Spinning circle centered over image -->
-                    <div class="d-none d-md-flex justify-content-center align-items-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-                    width: 550px; height: 550px; z-index: 10;">
+                    <div class="d-none d-md-flex justify-content-center align-items-center spinner">
                         <svg viewBox="0 0 300 300" style="width: 100%; height: 100%;">
                             <defs>
                                 <path id="circlePath" d="M150,150 m-100,0 a100,100 0 1,1 200,0 a100,100 0 1,1 -200,0" />
@@ -149,21 +154,17 @@
                     </div>
 
                     <!-- Actual image -->
-                    <img src="images/CDXVIIC_250.png" alt="CDXVIIC 250 Pin" class="img-fluid">
+                    <img src="images/CDXVIIC_250.png" alt="CDXVIIC 250 Pin" class="img-fluid w-75">
                 </div>
             </div>
 
             <!-- Third image -->
             <div class="col-10 col-sm-6 col-md-4 d-flex align-items-stretch position-relative">
-                <div class="w-100 d-flex align-items-center justify-content-center p-2 bg-light">
+                <div class="w-75 mx-auto d-flex align-items-center justify-content-center bg-light">
                     <img src="images/boy-with-flag.png" alt="Boy with flag" class="img-fluid">
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
 
 
