--- a/index.html
+++ b/index.html
@@ -139,12 +139,27 @@
                 <div
                     class="w-100 mx-auto d-flex align-items-center justify-content-center p-2 bg-light position-relative">
 
-                    <!-- Spinning circle centered over image -->
+                    <!-- Spinning circle centered over image
+                    div: A container for the spinning SVG.
+                    d-none: Hides it on all screen sizes by default.
+                    d-md-flex: Shows it only on medium (≥768px) and larger screens and applies display: flex.
+                    justify-content-center: Horizontally centers content inside the div.
+                    align-items-center: Vertically centers content.
+                    spinner:In my CSS)that sets spinner position: absolute, sizing, and spinning behavior. 
+                    -->
                     <div class="d-none d-md-flex justify-content-center align-items-center spinner">
+                        <!-- Starts scalable vector graphics (SVG) with a 300x300 coordinate system -->
                         <svg viewBox="0 0 300 300" style="width: 100%; height: 100%;">
                             <defs>
+                                <!-- defines the SBG path
+                                M150,150: Move to center point (150,150).
+                                m-100,0: Move left by 100 units (start of the circle).
+                                a100,100 0 1,1 200,0: Draw an arc (first half of the circle).
+                                a100,100 0 1,1 -200,0: Draw the second half — forming a full circle.
+                                -->
                                 <path id="circlePath" d="M150,150 m-100,0 a100,100 0 1,1 200,0 a100,100 0 1,1 -200,0" />
                             </defs>
+                            <!-- Spinner style in CSS -->
                             <text class="spinning-text">
                                 <textPath href="#circlePath" startOffset="0%">
                                     · Education · Community Service · Historical Preservation ·
