Refactor navigation comments for consistency and update active link color in CSS

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         <a class="nav-link" href="contactform.html">Join Us</a>
                                     </li>
 
-                                    <!-- Ancestors link (active) -->
+                                    <!-- Ancestors link -->
                                     <li class="nav-item">
                                         <a class="nav-link" href="ancestors.html">Ancestors</a>
                                     </li>
