--- a/ancestors.html
+++ b/ancestors.html
@@ -54,7 +54,7 @@
                                     <a class="nav-link" href="contactform.html">Join Us</a>
                                 </li>
 
-                                <!-- Ancestors link (active) -->
+                                <!-- Ancestors link -->
                                 <li class="nav-item">
                                     <a class="nav-link active" href="ancestors.html">Ancestors</a>
                                 </li>
