--- a/contactform.html
+++ b/contactform.html
@@ -51,7 +51,7 @@
                     <a class="nav-link active" href="contactform.html">Join Us</a>
                   </li>
 
-                  <!-- Ancestors link (active) -->
+                  <!-- Ancestors link -->
                   <li class="nav-item">
                     <a class="nav-link" href="ancestors.html">Ancestors</a>
                   </li>
